tests/paczka1/fuzzy1/76699108.err
Error in line 23: iaxa6 A129 39,2
Error in line 20: 92OTWTX5C A129 24,5
Error in line 28: 1uxkELL S85 72,9
Error in line 31: zh6IBRfRA9 S85 54,7
